fix image spacing

--- a/src/assets/scss/pill-tracker.scss
+++ b/src/assets/scss/pill-tracker.scss
@@ -85,6 +85,8 @@
         height: 100vh;
         background-image: url(../images/grandparents.jpg);
         background-size: cover;
-        background-position: 20% 75%
+        background-position: 20% 75%;
+        margin-top: 0px !important;
     }
+
 }
